# git-hook-commit-ref

./: Cargo.toml  README.md
.github/workflows/: tests.yml
src/: check.rs  cli.rs  config.rs  hook.rs  main.rs
src/check/tests/: mod.rs
src/config/tests/: mod.rs
src/config/tests/files/config/: test_get_config_pattern  test_get_config_with_all_fields  test_get_config_without_branches  test_get_config_without_org
